--- a/client/src/app/categories-page/categories-page.component.html
+++ b/client/src/app/categories-page/categories-page.component.html
@@ -1,9 +1,9 @@
   <div class="page-title">
-    <h4>Категории</h4>
+    <h4>Categories</h4>
 
     <button class="waves-effect waves-light btn grey darken-1"
             routerLink="/categories/new">
-      Добавить категорию
+      Add category
     </button>
   </div>
 
