img uploads using cloudinary

--- a/client/src/app/categories-page/categories-form/categories-form.component.html
+++ b/client/src/app/categories-page/categories-form/categories-form.component.html
@@ -47,6 +47,7 @@
     <div>
       <input
         type="file"
+        accept="image/*"
         class="dn"
         (change)="onFileUpload($event)"
         #input
